# python-project-50

./: .coverage  .gitignore  Makefile  README.md  codeclimate.yml  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml  pyci.yml  tests.yml
gendiff/: __init__.py  cli.py  engine.py  gendiff.py  parse.py
gendiff/formatters/: json.py  json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
tests/: test_flat.py  test_gendiff.py  test_json.py  test_nested.py  test_plain.py  test_stylish.py
tests/fixtures/: json_flat_result.txt  json_nested_result.txt
